[workspace]
members = [
    ".",
    "macros",
]

[package]
name = "qujila"
version = "0.1.0"
edition = "2021"

[dependencies]
qujila_macros = { verion = "0.1.0", path = "./macros" }
deadpool-postgres = { verion = "0.10", default_features = false, optional = true }
fxhash = "0.2"

[features]
default = ["db_postgres", "runtime_tokio"]

db_postgres = ["dep:deadpool-postgres"]
runtime_tokio = ["deadpool-postgres?/rt_tokio_1"]
runtime_async-std = ["deadpool-postgres?/rt_async-std_1"]
