[workspace]
members = [
    ".",
    "core",
    "macros",
]

[package]
name = "qujila"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", default_features = false }
tokio = { optional = true, version = "1", features = ["time", "net", "sync", "fs", "io-util", "rt"] }
async-std = { optional = true, version = "1" }

[features]
default = ["rt_tokio", "db_postgres"]

rt_tokio = ["dep:tokio", "sqlx/runtime-tokio-native-tls"]
rt_async-std = ["dep:async-std", "sqlx/runtime-async-std-native-tls"]

db_postgres = ["sqlx/postgres"]
db_mysql = ["sqlx/mysql"]
db_sqlite = ["sqlx/sqlite"]
